ScanFragment: it is now possible to refresh using an action menu or a Swipe-to-refresh gesture.

--- a/Facilescan/app/src/main/res/values-fr/strings.xml
+++ b/Facilescan/app/src/main/res/values-fr/strings.xml
@@ -44,5 +44,6 @@
     <string name="nav_sign_out_description">Se déconnecter</string>
     <string name="take_photo_description">Prendre une photo</string>
     <string name="photo_source_prompt">Source de la photo:</string>
+    <string name="menu_refresh">Rafraîchir</string>
 
 </resources>
