Sign in layout: added a Shard textview and a info button.

--- a/Facilescan/app/src/main/res/values-fr/strings.xml
+++ b/Facilescan/app/src/main/res/values-fr/strings.xml
@@ -45,5 +45,7 @@
     <string name="take_photo_description">Prendre une photo</string>
     <string name="photo_source_prompt">Source de la photo:</string>
     <string name="menu_refresh">Rafraîchir</string>
+    <string name="signin.shardPlaceholder">Espace privé</string>
+    <string name="signin.shardInfo">Explique ce qu\'est un espace privé.</string>
 
 </resources>
