--- a/Facilescan/app/src/main/res/values-fr/strings.xml
+++ b/Facilescan/app/src/main/res/values-fr/strings.xml
@@ -9,10 +9,10 @@
     <string name="signin.emailPlaceholder">E-mail</string>
     <string name="signin.passwordPlaceholder">Mot de passe</string>
     <string name="signin.loginButton">Connexion</string>
-    <string name="signin.shardPlaceholder">Espace privé</string>
-    <string name="signin.shardInfo">Explique ce qu\'est un espace privé.</string>
-    <string name="signin.shardInfo.title">Espace privé ?</string>
-    <string name="signin.shardInfo.message">Certains clients disposent d\'une instance de serveur privée, avec son propre stockage et sa propre puissance de calcul.\n\nSi vous ne disposez pas d\'un tel espace, laissez le champ vide.</string>
+    <string name="signin.shardPlaceholder">Shard</string>
+    <string name="signin.shardInfo">Explique ce qu\'est un shard.</string>
+    <string name="signin.shardInfo.title">Un «shard» ?</string>
+    <string name="signin.shardInfo.message">Un «shard» est une instance de serveur privée, avec son propre stockage et sa propre puissance de calcul.\n\nSi votre entreprise n\'utilise pas de shard, laissez le champ vide.</string>
 
 
     <!-- Tabs -->
